# ComfyUI-Workflow-Folders

./: LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish_action.yml
app/: logic.py  routes.py  security.py
web/: action.js  api.js  i18n.js  main.js  query.js  styles.css  trigger.js  ui-context.js  ui-modal.js  utils.js  workflow_folders.js
